wishlist functionality added with backend

--- a/front_end/src/components/product-category/productcategory.css
+++ b/front_end/src/components/product-category/productcategory.css
@@ -40,7 +40,12 @@
     background: none;
     transform: scale(2);
 }
-
+.redcolor{
+    color: #cccccc !important;
+}
+.greycolor{
+    color: red !important;
+}
 
 @media only screen and (max-width: 1440px) {}
 
