--- a/front_end/src/components/cart/CartLeft.css
+++ b/front_end/src/components/cart/CartLeft.css
@@ -1,5 +1,4 @@
 .cart-left-side-container {
-  /* border: 1px solid black; */
   width: 100%;
   background-color: #f0f2f5;
 }
@@ -12,7 +11,6 @@
 .cart-left-card {
   width: auto;
   height: auto;
-  /* border: 2px solid red; */
 }
 .cart-img-detail-container {
   display: flex;
@@ -21,7 +19,6 @@
 .cart-img {
   height: auto;
   width: 20%;
-  /* background-image: url(../../assets/Shoes.jpg); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -47,7 +44,6 @@
 }
 .cart-button-inc-dec-group {
   width: 10%;
-  /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -108,13 +104,11 @@
   text-align: center;
   display: inline-block !important;
   text-decoration: none;
-  /* border: 1px solid #fb641b; */
   cursor: pointer;
 }
 .cart-placeoreder-button button {
   background-color: #fb641b;
   border: none;
-  /* border: 1px solid #fb641b; */
   border-radius: 10px;
   color: white;
   margin: 15px;
@@ -210,16 +204,13 @@
   }
 }
 @media only screen and (max-width: 1024px) {
-  .button-28{
-
-  }
+ 
 }
 @media only screen and (max-width: 1440px) {
   .cart-add-remove {
     width: 40%;
   }
   .button-28{
-    /* width: 40%; */
     appearance: none;
     background-color: transparent;
     border: 2px solid #1A1A1A;
@@ -229,7 +220,6 @@
     cursor: pointer;
     display: inline-block;
     font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    /* font-size: 16px; */
     font-weight: 600;
     line-height: normal;
     margin: 10px;
@@ -248,16 +238,7 @@
   }
 }
 
-
-
-
-
-
-
-/* <button class="button-5" role="button">Button 5</button> */
-
-
-.button-5 {
+.cart-placeoreder-button_5 {
   align-items: center;
   background-clip: padding-box;
   background-color: #fa6400;
@@ -286,25 +267,23 @@
   width: auto;
 }
 
-.button-5:hover,
-.button-5:focus {
+.cart-placeoreder-button_5:hover,
+.cart-placeoreder-button_5:focus {
   background-color: #fb8332;
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
 }
 
-.button-5:hover {
+.cart-placeoreder-button_5:hover {
   transform: translateY(-1px);
 }
 
-.button-5:active {
+.bcart-placeoreder-button_5:active {
   background-color: #c85000;
   box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
   transform: translateY(0);
 }
 
-
-
-.button-24 {
+.remove_button {
   background: #FF4742;
   border: 1px solid #FF4742;
   border-radius: 6px;
@@ -329,14 +308,14 @@
   vertical-align: middle;
 }
 
-.button-24:hover,
-.button-24:active {
+.remove_button:hover,
+.remove_button:active {
   background-color: initial;
   background-position: 0 0;
   color: #FF4742;
 }
 
-.button-24:active {
+.remove_button:active {
   opacity: .5;
 }
 
