--- a/front_end/src/components/profile/profile.css
+++ b/front_end/src/components/profile/profile.css
@@ -65,6 +65,14 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+.btn-display-none{
+  display: none;
+}
+
+.btn-display-block{
+  display: block;
+}
+
 @media only screen and (max-width: 768px) {
  
   .main-title{
