--- a/front_end/src/components/product-category/productcategory.css
+++ b/front_end/src/components/product-category/productcategory.css
@@ -17,16 +17,20 @@
     width: 20rem;
     z-index: 1;
 }
-.ant-card-body{
+
+.ant-card-body {
     padding: 0 !important;
 }
-.title{
+
+.title {
     font-size: 1.3rem !important;
 }
-.price{
+
+.price {
     font-weight: bold;
     font-size: 1.3rem;
 }
+
 .img {
     height: 28rem;
 }
@@ -40,14 +44,14 @@
     background: none;
     transform: scale(2);
 }
-.redcolor{
+
+.redcolor {
     color: #cccccc !important;
 }
-.greycolor{
+
+.greycolor {
     color: red !important;
 }
-
-@media only screen and (max-width: 1440px) {}
 
 @media only screen and (max-width: 1024px) {
     .wishlist-btn-new {
@@ -56,6 +60,9 @@
     }
 
     .inner-card {
+        height: 100% !important;
+    }
+    .img{
         height: 100%;
     }
 }
