--- a/front_end/src/components/profile/profile.css
+++ b/front_end/src/components/profile/profile.css
@@ -71,6 +71,16 @@ input::-webkit-inner-spin-button {
 
 .btn-display-block{
   display: block;
+  width: 80px;
+  margin-left:20px;
+  border: none;
+  background-color:#1890ff;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
+
 }
 
 @media only screen and (max-width: 768px) {
