--- a/front_end/src/components/forgotpassword/forgotpassword.css
+++ b/front_end/src/components/forgotpassword/forgotpassword.css
@@ -7,3 +7,14 @@
     color: #1890ff;
     cursor: pointer;
 }
+
+.field-display-none{
+    display: none;
+  }
+  
+  .field-display-block{
+    display: block;
+    border: none;
+    color: white;
+    border-radius: 5px;
+  }
